# Cmake-and-Qt

./: CMakeLists.txt  README.md
